# Tango

./: .gitignore  README.md  commands.txt  ologic_680_x_400.pgm  ologic_680_x_400.yaml  tango_depth.rviz  tango_phone.launch  tango_phone.urdf  tango_vio.rviz
ROSTango/src/rostango/: .gitignore  CMakeLists.txt  build.gradle  local.properties  package.xml  settings.gradle
ROSTango/src/rostango/Mavlink/: build.gradle
ROSTango/src/rostango/TangoNodes/: build.gradle
ROSTango/src/rostango/TangoNodes/src/main/: AndroidManifest.xml
ROSTango/src/rostango/android_tutorial_image_transport/: build.gradle
ROSTango/src/rostango/android_tutorial_pubsub/: .project  build.gradle
ROSTango/src/rostango/gradle/wrapper/: gradle-wrapper.properties
ROSTango/src/rostango/tango_depthimage/: build.gradle
ROSTango/src/rostango/tango_depthimage/src/main/: AndroidManifest.xml
ROSTango/src/rostango/tango_pub/: build.gradle
ROSTango/src/rostango/tango_pub/src/main/: AndroidManifest.xml
ROSTango/src/rostango/tango_serial/: build.gradle
ROSTango/src/rostango/tango_serial/src/main/: AndroidManifest.xml
ROSTango/src/rostango/tango_vio/: build.gradle
ROSTango/src/rostango/tango_vio/src/main/: AndroidManifest.xml
ROSTango/src/rostango/usbserial/: build.gradle
ROSTango/src/rostango/usbserial/src/main/: AndroidManifest.xml
ROSTango/src/rostango/ys_serial/: build.gradle
ROSTango/src/rostango/ys_serial/src/: .gitignore
ROSTango/src/rostango/ys_serial/src/main/: AndroidManifest.xml
ROSTango/src/tango_bringup/: CMakeLists.txt  package.xml
ROSTango/src/tango_bringup/launch/: tango_depth.launch  tango_urdf.launch  tango_vio.launch  tango_vio_depth_ys.launch  tango_vio_map.launch  tango_vio_ys.launch  tango_ys_urdf.launch
ROSTango/src/tango_bringup/rviz/: tango_depth.rviz  tango_vio.rviz  tango_vio_depth_ys.rviz  tango_vio_map.rviz
ROSTango/src/tango_bringup/urdf/: tango_phone.urdf  tango_yellowstone.urdf
ROSTango/src/tf2_android/: CMakeLists.txt  README.md  build.gradle  package.xml  settings.gradle
ROSTango/src/tf2_android/gradle/wrapper/: gradle-wrapper.properties
ROSTango/src/tf2_android/insert_benchmark/src/main/: AndroidManifest.xml
ROSTango/src/tf2_android/lookup_benchmark/: build.gradle
ROSTango/src/tf2_android/lookup_benchmark/src/main/: AndroidManifest.xml
ROSTango/src/tf2_android/ndk_library_scripts/: README.md  build_boost.sh  build_catkin.sh  build_console_bridge.sh  build_tf2.sh  config.sh  do_everything.sh  get_boost.sh  get_catkin.sh  get_console_bridge.sh  get_ndk.sh  get_ros_stuff.sh  patch_boost.sh  prepare_boost.sh  sample_app.sh  setup_ndk_project.sh  utils.sh
ROSTango/src/tf2_android/ndk_library_scripts/files/: android.toolchain.cmake.addendum
ROSTango/src/tf2_android/ndk_library_scripts/files/boost/: 0001-fix-android-endianness.patch  0002-filesystem-v2-vfs.patch  0003-filesystem-v3-vfs.patch  0004-boost-build-no-rt.patch  user-config.jam.partial
ROSTango/src/tf2_android/ndk_library_scripts/files/sample_app/: AndroidManifest.xml.in  custom_rules.xml.in
ROSTango/src/tf2_android/ndk_library_scripts/files/tfa/: Android.mk  Application.mk
ROSTango/src/tf2_android/tf2_ros/: build.gradle
ROSTango/src/tf2_android/tf2_ros/src/main/: AndroidManifest.xml
ROSTango/src/tf2_android/tf2_test/: build.gradle
ROSTango/src/tf2_android/tf_broadcaster_app/: build.gradle
ROSTango/src/tf2_android/tf_echo/: build.gradle
(+149 files in other folders)
