<?xml version="1.0"?>
<package>
  <name>tf2_android</name>
  <version>0.1.0</version>
  <description>
    tf2 on android
  </description>
  <maintainer email="example@example.com">example</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>android_core</build_depend>
  <build_depend>android_extras</build_depend>
  <build_depend>zeroconf_jmdns_suite</build_depend>
</package>
